--- a/index.html
+++ b/index.html
@@ -610,6 +610,16 @@
                                     <img src="images/info_skill_pic_6.png" alt="Jquery logo">
                                 </div>
                             </div>
+                            <div>
+                                <div class="info_skill_item_title h5 font_bold">前後端運作概念：</div>
+                                <div class="info_skill_item_text">
+                                    有基礎和工程師討論功能執行面之事務。
+                                </div>
+                                <div class="info_skill_item_note" style="display:none;">*工作專案有成果展示</div>
+                                <div class="info_skill_item_pic">
+                                    <img src="images/info_skill_pic_10.png" alt="code logo">
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="info_skill_part">
