--- a/index.html
+++ b/index.html
@@ -2573,9 +2573,7 @@
                                 <div class="text_row">
                                     <div class="text_item">
                                         <div>
-                                            <picture>
-                                                <img src="images/sino_pic_6.png" class="sino_pic_6">
-                                            </picture>
+                                            <img src="images/sino_pic_6.png" class="sino_pic_6">
                                         </div>
                                     </div>
                                 </div>
@@ -2592,9 +2590,13 @@
                                 <div class="text_row">
                                     <div class="text_item">
                                         <div>
-                                            <picture>
-                                                <img src="images/sino_pic_7.png" class="sino_pic_7">
-                                            </picture>
+                                            <img src="images/sino_pic_7_1.png" class="sino_pic_7">
+                                            <img src="images/sino_pic_7_2.png" class="sino_pic_7">
+                                            <img src="images/sino_pic_7_3.png" class="sino_pic_7">
+                                            <img src="images/sino_pic_7_4.png" class="sino_pic_7">
+                                            <img src="images/sino_pic_7_5.png" class="sino_pic_7">
+                                            <img src="images/sino_pic_7_6.png" class="sino_pic_7">
+                                            <img src="images/sino_pic_7_7.png" class="sino_pic_7">
                                         </div>
                                     </div>
                                 </div>
