--- a/index.html
+++ b/index.html
@@ -2202,7 +2202,7 @@
                                         <i class="fa fa-long-arrow-down display_block_1440"></i>
                                     </div>
                                     <div class="text_item">
-                                        <div class="text_item_title h6 emphasize_text">參考簽訂保單過程，規劃操作流程</div>
+                                        <div class="text_item_title h6 emphasize_text">參考簽訂保單過程，規劃網站操作流程</div>
                                         <div>
                                             <picture>
                                                 <source media="(max-width:430px)" srcset="images/sino_pic_2_540.png" />
@@ -2380,7 +2380,7 @@
                                                         </div>
                                                         <div class="subject_group_content_item">
                                                             <div class="item_title">
-                                                                <div class="dot"><i class="fa fa-circle"></i></div>可以申請投保保險商品
+                                                                <div class="dot"><i class="fa fa-circle"></i></div>可以申請投保保險商品。
                                                             </div>
                                                             <div class="item_text">
                                                                 需登入為永豐銀行會員。
@@ -2411,10 +2411,10 @@
                                                 <div class="info_content_subject_title h6 font_bold">內容項目：</div>
                                                 <div class="info_content_subject_text">
                                                     <div><span class="font_bold">保單管理：</span><span class="text_note">申請時間、訂單號碼、處理狀態。</span></div>
-                                                    <div><span class="font_bold">要保險人&nbsp;/&nbsp;被保險人資料：</span><span class="text_note">姓名、性別、國籍、身分證字號、出生日期、連絡電話、電子郵件、通訊地址。</span></div>
+                                                    <div><span class="font_bold">要保險人&nbsp;/&nbsp;被保險人資料：</span><span class="text_note">來自永豐網銀會員API文件。</span></div>
                                                     <div><span class="font_bold">保險內容：</span><span class="text_note">來自保險公司API文件。</span></div>
                                                     <div><span class="font_bold">核保資料：</span><span class="text_note">來自保險公司API文件。</span></div>
-                                                    <div><span class="font_bold">受益人資料：</span><span class="text_note">與被保險人關係、受益人順位、姓名、性別、國籍、身分證字號、出生日期、連絡電話、通訊地址、銀行帳戶。</span></div>
+                                                    <div><span class="font_bold">身故受益人資料：</span><span class="text_note">來自保險公司API文件。</span></div>
                                                 </div>
                                             </div>
                                             <div class="system_data_info_content_subject" style="margin-bottom:0px;">
@@ -2430,7 +2430,15 @@
                                                                 <div class="dot"><i class="fa fa-circle"></i></div>可以填寫投保申請資料表單。
                                                             </div>
                                                             <div class="item_text">
-                                                                要保險人/被保險人資料、保險內容、核保資料、受益人資料。
+                                                                要保險人/被保險人資料、保險內容、核保資料、身故受益人資料。
+                                                            </div>
+                                                        </div>
+                                                        <div class="subject_group_content_item">
+                                                            <div class="item_title">
+                                                                <div class="dot"><i class="fa fa-circle"></i></div>可以儲存投保申請資料，成為網站會員資料。
+                                                            </div>
+                                                            <div class="item_text">
+                                                                電子信箱、通訊地址、身故受益人資料。
                                                             </div>
                                                         </div>
                                                         <div class="subject_group_content_item">
@@ -2583,7 +2591,7 @@
                         <div class="pup_content">
                             <div class="part_title h5 font_bold emphasize_text">前言</div>
                             <div class="pup_normal_text">
-                                將網站架構與流程內容視覺化
+                                將網站架構與流程內容以視覺化呈現。
                             </div>
                         </div>
                     </div>
@@ -2635,10 +2643,10 @@
                         <div class="pup_content">
                             <div class="part_title h5 font_bold emphasize_text">前言</div>
                             <div class="pup_normal_text">
-                                於永豐保險業務窗口取得相關保險內容資料，將流程架構與頁面布局統整出線框稿(wireframe)。
+                                於永豐保險業務窗口取得相關保險內容資料，將流程架構與頁面布局統整出線框稿(wireframe)；<br>經由討論與需求方、程式端形成共識後逐步更動，作品集展示爲最終定稿版本，<span class="emphasize_text">因版面空間有限，以電腦裝置瀏覽為佳。</span>
                             </div>
                             <div class="pup_normal_text">
-                                <span class="emphasize_text">因版面規劃空間有限，以電腦裝置(桌記、筆電)瀏覽為佳；</span><br><a href="#" target="_blank">完整線框稿請至figma瀏覽</a>。
+                                <a href="https://www.figma.com/design/iBEclKLRC0BWhdVneCdE7h/%E7%B6%B2%E7%AB%99%E5%85%A7%E5%AE%B9%E8%A6%8F%E5%8A%83?node-id=0-1&t=gTP4YLRqzrOp1k9r-1" target="_blank" class="pup_window_btn">前往figma瀏覽完整線框稿</a>
                             </div>
                         </div>
                     </div>
@@ -2668,7 +2676,7 @@
                                     <div class="dot"><i class="fa fa-circle"></i></div>本站使用API：
                                 </div>
                                 <div class="item_text large_item_text">
-                                    永豐保險業務API、永豐網銀會員API、各家保險公司商品API(泰安保險商品API)、台灣縣市地區API、台灣銀行名稱代碼API。
+                                    永豐保險業務API、永豐網銀會員API、各家保險公司商品API(泰安保險商品API)、台灣縣市地區API、台灣銀行名稱代碼API、世界國家API、電子信箱檢核API。
                                 </div>
                             </div>
                             <div class="subject_group_content_item" style="margin-top:10px;">
@@ -2679,21 +2687,16 @@
                                     1.若網頁資料無說明來源，則為網站建置時人工寫入HTML。
                                 </div>
                                 <div class="item_text large_item_text">
-                                    2.必填欄位空值的錯誤提示：<br>
-                                    <div class="item_text_note">input text、input password、input number、input date&nbsp;=&nbsp;「請輸入+欄位名稱」。</div>
-                                    <div class="item_text_note">select&nbsp;=&nbsp;「請選擇+欄位名稱」。</div>
-                                </div>
-                                <div class="item_text large_item_text">
-                                    3.網頁狀態：<br>
+                                    2.網頁狀態：<br>
                                     <div class="item_text_note">初始狀態，使用者對網頁未有任何操作。</div>
                                     <div class="item_text_note">理想狀態，使用者完成網頁操作。</div>
-                                    <div class="item_text_note">空白狀態，網頁中有資料無法呈現。</div>
-                                    <div class="item_text_note">局部資料狀態，非理想狀態之外的資料樣貌。</div>
-                                    <div class="item_text_note">錯誤狀態，網頁發生無法顯示。</div>
+                                    <div class="item_text_note">錯誤資料狀態，使用者於網頁產生操作錯誤。</div>
+                                    <div class="item_text_note">空白資料狀態，網頁有資料無法呈現。</div>
+                                    <div class="item_text_note">局部資料狀態，理想狀態之外的網頁操作。</div>
+                                    <div class="item_text_note">錯誤狀態，網頁發生錯誤無法顯示。</div>
                                 </div>
                                 <div class="item_text large_item_text">
-                                    4.介面元件狀態：<br>
-                                    <div class="item_text_note">以文字說明，樣式於mockups設計呈現。</div>
+                                    3.頁面狀態樣貌，以後續mockups設計呈現為準。
                                 </div>
                             </div>
                         </div>
@@ -2707,9 +2710,11 @@
                                 <div class="text_row">
                                     <div class="text_item">
                                         <div>
+                                            <img src="images/sino_pic_9_0.png" class="sino_pic_9">
                                             <img src="images/sino_pic_9_1.png" class="sino_pic_9">
                                             <img src="images/sino_pic_9_2.png" class="sino_pic_9">
                                             <img src="images/sino_pic_9_3.png" class="sino_pic_9">
+                                            <img src="images/sino_pic_9_4.png" class="sino_pic_9">
                                         </div>
                                     </div>
                                 </div>
