--- a/index.html
+++ b/index.html
@@ -2688,12 +2688,12 @@
                                 </div>
                                 <div class="item_text large_item_text">
                                     2.網頁狀態：<br>
-                                    <div class="item_text_note">初始狀態，使用者對網頁未有任何操作。</div>
-                                    <div class="item_text_note">理想狀態，使用者完成網頁操作。</div>
-                                    <div class="item_text_note">錯誤資料狀態，使用者於網頁產生操作錯誤。</div>
-                                    <div class="item_text_note">空白資料狀態，網頁有資料無法呈現。</div>
-                                    <div class="item_text_note">局部資料狀態，理想狀態之外的網頁操作。</div>
-                                    <div class="item_text_note">錯誤狀態，網頁發生錯誤無法顯示。</div>
+                                    <div class="item_text_note">初始狀態，網頁(使用者)未輸入資料。</div>
+                                    <div class="item_text_note">理想狀態，網頁完整資料呈現。</div>
+                                    <div class="item_text_note">錯誤資料狀態，網頁資料錯誤。</div>
+                                    <div class="item_text_note">空白資料狀態，網頁無資料呈現。</div>
+                                    <div class="item_text_note">局部資料狀態，理想狀態之外的資料呈現。</div>
+                                    <div class="item_text_note">錯誤狀態，網頁發生錯誤。</div>
                                 </div>
                                 <div class="item_text large_item_text">
                                     3.頁面狀態樣貌，以後續mockups設計呈現為準。
