--- a/website/travel_activity/page.html
+++ b/website/travel_activity/page.html
@@ -27,9 +27,9 @@
                 <div class="nav_choice"><a href="#s1">抽獎活動</a></div>
                 <div class="nav_choice"><a href="#s2">旅遊常見情境</a></div>
                 <div class="nav_choice"><a href="#s3">合作廠商</a></div>
-                <div class="nav_choice"><a href="#">得獎名單</a></div>
+                <div class="nav_choice" style="display:none;"><a href="#">得獎名單</a></div>
                 <div class="nav_choice none_1279 reward_record_btn"><a href="#">我的抽獎紀錄</a></div>
-                <div class="nav_choice none_1279"><a href="#">會員註冊/登入</a></div>
+                <div class="nav_choice none_1279" style="display:none;"><a href="#">會員註冊/登入</a></div>
                 <div class="other_site_container">
                     <a href="#" target="_blank"><img src="image/fb_logo.png" class="hvr-top"></a>
                     <a href="#" target="_blank"><img src="image/ig_logo.png" class="hvr-top"></a>
@@ -38,7 +38,7 @@
             </div>
             <div class="nav_mobile">
                 <a href="#" class="reward_record_btn">抽獎紀錄</a>
-                <a href="#">註冊/登入</a>
+                <a href="#" style="display:none;">註冊/登入</a>
                 <img src="image/nav_icon.png" class="nav_icon nav_mobile_btn nav_icon_w">
                 <img src="image/nav_icon_b.png" class="nav_icon nav_mobile_btn nav_icon_b">
             </div>
