--- a/index_joe_uiux_works.html
+++ b/index_joe_uiux_works.html
@@ -185,7 +185,7 @@
                     <span class="title">工作專案</span>
                     <span><img src="images/page_list_item_arrow.png" class="page_list_item_arrow" alt="下拉選單"></span>
                 </div>
-                <div class="page_list_item_page_choice" style="display:none;">
+                <div class="page_list_item_page_choice">
                     <div><a href="#p7">永豐銀行&nbsp;網路投保網站</a></div>
                     <div><a href="#p8">元大期貨&nbsp;官方網站</a></div>
                     <div><a href="#p9">裕隆集團&nbsp;員工APP&amp;管理後台</a></div>
