--- a/index_joe_uiux_works.html
+++ b/index_joe_uiux_works.html
@@ -3870,7 +3870,7 @@
         </div>
         <div class="pup_window_content">
 
-            <div class="pup_window_content_title h4 font_bold">泰安行銷人員提供&nbsp;示意資料</div>
+            <div class="pup_window_content_title h4 font_bold">行銷人員提供&nbsp;示意資料</div>
             <div class="pup_window_content_scroll">
                 <div class="pup_window_content_part">
                     <div class="pup_content">
@@ -3883,7 +3883,7 @@
                     </div>
                 </div>
                 <div class="pup_window_content_end_tip_container">
-                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">泰安行銷人員提供&nbsp;示意資料</span></span>
+                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">行銷人員提供&nbsp;示意資料</span></span>
                 </div>
             </div>
         </div>
