--- a/website/travel_activity/page.html
+++ b/website/travel_activity/page.html
@@ -405,16 +405,16 @@
                     <div class="pup_qa_pic_title">音樂祭</div>
                 </div>
                 <div class="pup_qa_question">
-                    <div class="question">1.題目？</div>
+                    <div class="question">1.世界三大音樂節，包含以下那一個？</div>
                     <ul class="choice_list">
                         <li>
-                            <div class="choice_title"><img src="image/true_icon.png" class="answer_result_icon">(A)</div>選項文字選項文字
+                            <div class="choice_title"><img src="image/true_icon.png" class="answer_result_icon">(A)</div>科切拉音樂節
                         </li>
                         <li>
-                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(B)</div>選項文字選項文字
+                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(B)</div>狄波拉音樂節
                         </li>
                         <li>
-                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(C)</div>選項文字選項文字
+                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(C)</div>柯博文音樂節
                         </li>
                     </ul>
                 </div>
@@ -445,13 +445,13 @@
                     <div class="title">答案公布</div>
                     <ul class="answer_list">
                         <li>
-                            1.答案文字答案文字
+                            1.科切拉音樂節
                         </li>
                         <li>
-                            2.答案文字答案文字
+                            2.春吶音樂節
                         </li>
                         <li>
-                            3.答案文字答案文字
+                            3.芝加哥
                         </li>
                     </ul>
                     <div class="answer_note">
@@ -484,16 +484,16 @@
                     <div class="pup_qa_pic_title">玩露營</div>
                 </div>
                 <div class="pup_qa_question">
-                    <div class="question">1.題目？</div>
+                    <div class="question">1.露營要帶甚麼物品，晚上會安穩好眠？</div>
                     <ul class="choice_list">
                         <li>
-                            <div class="choice_title"><img src="image/true_icon.png" class="answer_result_icon">(A)</div>選項文字選項文字
+                            <div class="choice_title"><img src="image/true_icon.png" class="answer_result_icon">(A)</div>睡袋
                         </li>
                         <li>
-                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(B)</div>選項文字選項文字
+                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(B)</div>睡衣
                         </li>
                         <li>
-                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(C)</div>選項文字選項文字
+                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(C)</div>口罩
                         </li>
                     </ul>
                 </div>
@@ -524,13 +524,13 @@
                     <div class="title">答案公布</div>
                     <ul class="answer_list">
                         <li>
-                            1.答案文字答案文字
+                            1.睡袋
                         </li>
                         <li>
-                            2.答案文字答案文字
+                            2.打火機
                         </li>
                         <li>
-                            3.答案文字答案文字
+                            3.醋
                         </li>
                     </ul>
                     <div class="answer_note">
@@ -563,16 +563,16 @@
                     <div class="pup_qa_pic_title">逛城市</div>
                 </div>
                 <div class="pup_qa_question">
-                    <div class="question">1.題目？</div>
+                    <div class="question">1.眾所周知的米其林指南源自哪裡？</div>
                     <ul class="choice_list">
                         <li>
-                            <div class="choice_title"><img src="image/true_icon.png" class="answer_result_icon">(A)</div>選項文字選項文字
+                            <div class="choice_title"><img src="image/true_icon.png" class="answer_result_icon">(A)</div>法國米其林輪胎
                         </li>
                         <li>
-                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(B)</div>選項文字選項文字
+                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(B)</div>美國米高梅
                         </li>
                         <li>
-                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(C)</div>選項文字選項文字
+                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(C)</div>日本必比登
                         </li>
                     </ul>
                 </div>
@@ -603,13 +603,13 @@
                     <div class="title">答案公布</div>
                     <ul class="answer_list">
                         <li>
-                            1.答案文字答案文字
+                            1.法國米其林輪胎
                         </li>
                         <li>
-                            2.答案文字答案文字
+                            2.西班牙帝國
                         </li>
                         <li>
-                            3.答案文字答案文字
+                            3.榴槤
                         </li>
                     </ul>
                     <div class="answer_note">
@@ -642,16 +642,16 @@
                     <div class="pup_qa_pic_title">去玩水</div>
                 </div>
                 <div class="pup_qa_question">
-                    <div class="question">1.題目？</div>
+                    <div class="question">1.李奧納多拍攝電影【海灘】取景島嶼是？？</div>
                     <ul class="choice_list">
                         <li>
-                            <div class="choice_title"><img src="image/true_icon.png" class="answer_result_icon">(A)</div>選項文字選項文字
+                            <div class="choice_title"><img src="image/true_icon.png" class="answer_result_icon">(A)</div>PP島
                         </li>
                         <li>
-                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(B)</div>選項文字選項文字
+                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(B)</div>火燒島
                         </li>
                         <li>
-                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(C)</div>選項文字選項文字
+                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(C)</div>楓之島
                         </li>
                     </ul>
                 </div>
@@ -682,13 +682,13 @@
                     <div class="title">答案公布</div>
                     <ul class="answer_list">
                         <li>
-                            1.答案文字答案文字
+                            1.PP島
                         </li>
                         <li>
-                            2.答案文字答案文字
+                            2.日光照進洞窟後反射造成
                         </li>
                         <li>
-                            3.答案文字答案文字
+                            3.粉紅海灘
                         </li>
                     </ul>
                     <div class="answer_note">
@@ -721,10 +721,10 @@
                     <div class="pup_qa_pic_title">自駕遊</div>
                 </div>
                 <div class="pup_qa_question">
-                    <div class="question">1.題目？</div>
+                    <div class="question">1.在印度老一輩駕駛眼中，按喇叭代表什麼？</div>
                     <ul class="choice_list">
                         <li>
-                            <div class="choice_title"><img src="image/true_icon.png" class="answer_result_icon">(A)</div>選項文字選項文字
+                            <div class="choice_title"><img src="image/true_icon.png" class="answer_result_icon">(A)</div>駕駛禮貌的展現
                         </li>
                         <li>
                             <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(B)</div>選項文字選項文字
@@ -761,13 +761,13 @@
                     <div class="title">答案公布</div>
                     <ul class="answer_list">
                         <li>
-                            1.答案文字答案文字
+                            1.駕駛禮貌的展現
                         </li>
                         <li>
-                            2.答案文字答案文字
+                            2.藍嶺公路(Blue Ridge Parkway)
                         </li>
                         <li>
-                            3.答案文字答案文字
+                            3.海螢休息區
                         </li>
                     </ul>
                     <div class="answer_note">
@@ -800,16 +800,16 @@
                     <div class="pup_qa_pic_title">吃美食</div>
                 </div>
                 <div class="pup_qa_question">
-                    <div class="question">1.題目？</div>
+                    <div class="question">1.英國人最喜歡什麼？</div>
                     <ul class="choice_list">
                         <li>
-                            <div class="choice_title"><img src="image/true_icon.png" class="answer_result_icon">(A)</div>選項文字選項文字
+                            <div class="choice_title"><img src="image/true_icon.png" class="answer_result_icon">(A)</div>炸鮮魚與薯條
                         </li>
                         <li>
-                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(B)</div>選項文字選項文字
+                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(B)</div>豬肚肉燉煮的滷肉飯
                         </li>
                         <li>
-                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(C)</div>選項文字選項文字
+                            <div class="choice_title"><img src="image/false_icon.png" class="answer_result_icon">(C)</div>海鮮湯麵
                         </li>
                     </ul>
                 </div>
@@ -840,17 +840,21 @@
                     <div class="title">答案公布</div>
                     <ul class="answer_list">
                         <li>
-                            1.答案文字答案文字
+                            1.炸鮮魚與薯條
                         </li>
                         <li>
-                            2.答案文字答案文字
+                            2.台南東山
                         </li>
                         <li>
-                            3.答案文字答案文字
+                            3.你淺淺的微笑
                         </li>
                     </ul>
                     <div class="answer_note">
                         恭喜成為美食達人！公開分享立即抽！<br />
+                        你準備好起飛了嗎？<span class="red_text">投保旅平險再抽兩萬元旅遊兌換券！</span>
+                    </div>
+                    <div class="answer_note" style="display:none;">
+                        你離美食達人只差一步！公開分享立即抽！<br />
                         你準備好起飛了嗎？<span class="red_text">投保旅平險再抽兩萬元旅遊兌換券！</span>
                     </div>
                 </div>
